@@ -1,5 +1,47 @@
+buildscript {
+    ext {
+        springBootVersion = '2.0.3.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
+}
+
 apply plugin: 'java'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+
+jar {
+    enabled = true
+}
+
+bootJar {
+    enabled = false
+}
+
+repositories {
+    mavenCentral()
+}
+
+configurations.compile {
+    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    exclude group: 'org.springframework.boot', module: 'logback-classic'
+}
 
 dependencies {
-    compile project(':api')
+        compile project(':api')
+        compile 'org.apache.commons:commons-lang3:3.7'
+        compile 'org.springframework.boot:spring-boot-starter'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.0'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
+        testCompile 'junit:junit:4.12'
+        testCompile 'org.springframework.boot:spring-boot-starter-test'
+}
+
+test {
+    jvmArgs '--illegal-access=deny' 
+    testLogging.showStandardStreams = true
 }
